# poc-tl10k

./: .gitignore  hello.py  models.py  pdf-downloader.py  pipeline.py  pyproject.toml  revenue-extraction.py  revenue-table-extraction.py  revenue_parser.py  tl10k.py
outputs/: AAPL.json  KO.json  NFLX.json  TSLA.json
prompts/: overview.txt  products_and_services.txt  revenue_table_extractor.txt  risk_factors.txt  strategies_and_future_plans.txt
